syntax="proto3";

package genproto;
option go_package="genproto/user_service";

message Respondent {
    string id = 1;
    string name = 2;
    string email = 3;
    string phone = 4;
    string sber_id = 5;
    string photo = 6;
    string company = 7;
    string position = 8;
    string description = 9;
    Rating rating = 10;
}

message GetAllRespondentResponse {
    repeated Respondent respondents = 1;
    int32 count = 2;
}

message RespondentId {
    string id = 1;
}

message UpdateRespondentPhoto {
    string user_id = 1;
    string photo = 2;
}

message Rating {
    float communication = 1;
    float experience = 2;
    float punctuality = 3;
}

message UpdateRespondentRating {
    string user_id = 1;
    float communication = 2;
    float experience = 3;
    float punctuality = 4;
}